# erased_structures

./: .gitignore  Cargo.toml  LICENSE  README.md
compile_time_test/: Cargo.toml
compile_time_test/src/: lib.rs
compile_time_test/src/group_4/: file_0.rs  mod.rs
compile_time_test/src/group_6/: file_2.rs
src/: erased_tree.rs  lib.rs
