[package]
name = "compile_time_test"
version = "0.1.0"
authors = ["vgatherps <vgatherps@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erased_structures = {path = "../"}

[features]
default = []
erased = []

